fixing product options not showing the right options

--- a/assets/scss/components/stencil/productView/_productView.scss
+++ b/assets/scss/components/stencil/productView/_productView.scss
@@ -723,7 +723,7 @@ iframe.youtube {
       }
 
       &.hide {
-        display: none;
+        display: none !important;
       }
 
       &:hover,
